# Chunking-Vis

./: Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
chunker/: apps.py  forms.py  splitter.py  utils.py  views.py
chunker/static/chunker/css/: style.css
chunker/templates/chunker/: index.html
chunking_demo/: asgi.py  settings.py  urls.py  wsgi.py
